syntax = "proto3";

package access_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/GolZrd/micro-chat/auth/pkg/access_v1;access_v1";

service AccessAPI {
    rpc Check(CheckRequest) returns (google.protobuf.Empty);
}

message CheckRequest {
    string endpoint_address = 1;
}